--- a/index.html
+++ b/index.html
@@ -10,28 +10,45 @@
     <p>Welcome to this tutorial on html, we would be starting with the different types of tags and attributes.</p>
 
     <h1>Anchor Tag</h1>
-        <p>The anchor tag "a" is used to define a hyperlink,  <a> it consists of an opening and closing tag, with the content inbetween and it makes use of the attribute "href": (opening tag)a href="$">link( closing tag)a. <br>
+        <p>The anchor tag "a" is used to define a hyperlink,  <a> it consists of an opening and closing tag, with the content inbetween and it makes use of the attribute "href": &lta href="$"&gtlink&lt/a&gt <br>
         An example of this is; <a href="https://www.instagram.com/6ixx_god/" target="_blank">My instagram profile page</a></p>
         <h1>Bold Tag</h1>
-        <p>Used to define bold text; (tagname)content(tagname) For example, <b>YOU CAN'T KILL MY VIBE</b>.</p>
+        <p>Used to define bold text; &ltb&gtcontent&lt/b&gt For example, <b>YOU CAN'T KILL MY VIBE</b>.</p>
     <h1>Body Tag</h1>
-        <p>Body tag is used to define the documents body;(tagname)content(tagname).</p>
+        <p>Body tag is used to define the documents body;&ltbody&gtcontent&lt/body&gt.</p>
     <h1>Address Tag</h1>
-        <p>Used to define contact information for the owner of a document.</p>
+        <p>Used to define contact information for the owner of a document; &ltaddress&gtcontent&lt/address&gt.</p>
     <h1>Blockquote Tag</h1>
-        <p>It defines a section that is quoted from another source; (tagname)content(tagname); ,<br>
+        <p>It defines a section that is quoted from another source; &ltBlockquote&gtcontent&lt/Blockquote&gt ,<br>
         For example; <Blockquote cite="https://malcolmx.com/quotes">You can't seperate peace from freedom because no one can be at peace unless he has freedom.</Blockquote></p>
     <h1>Heading Tag</h1>
         <p>Used to define html headings, ranges from h1-h6, as we move from h1-h6 the size of the heading decreases.
     <h1>Mark Tag</h1>
-        <p>Used to define a marked text; (tagname)content(tagname) <br>
+        <p>Used to define a marked text; &ltmark&gtcontent&lt/mark&gt <br>
         For example, <mark>TAYLOR</mark>.</p>
     <h1>Image Tag</h1> 
         <p>Used to define an image, represented by img it doesn't have a closing tag and it makes use of the attribute "src" which specifies the path to the image to be displayed and "alt" which gives an additional information about the image incase it doesn't load,
-         it also makes use of the width and height attribute. <br>
+         it also makes use of the width and height attribute; &ltimg src="$"&gt <br>
          <img src="duckworth.jpg" alt="kendrick lamar" width="500" height="250"></p>   
     <h1>Paragraph Tag</h1>    
-        <p>It is used to define a pararaph, denoted by the letter "p". </p> 
+        <p>It is used to define a pararaph, denoted  &ltp&gt&lt/p&gt.</p>   
+    <h1>Strong Tag</h1>    
+        <p>This tag is similar to bold tag;&ltstong&gtcontent&lt/strong&gt.
+            for example; Run me my <strong>MONEY!!!!!</strong>. </p>
+    <h1>Cite Tag</h1>
+        <p>This tag defines a citation and displays it in italics; &ltcite&gtcontent&lt/cite&gt.
+            For example; <cite>Tomorrow never dies</cite>.</p>   
+    <h1>Em Tag</h1> 
+        <p>This tag is similar to italics tag; &ltem&gtcontent&lt/em&gt.</p> 
+    <h1>Ordered List Tag</h1>  
+        <p>Used to list items accordingly with numbers; &ltol&gtcontent&lt/ol&gt.</p> 
+    <h1>Unordered List Tag</h1>     
+        <p>Used to list items in bullet points; &ltul&gtcontent&lt/ul&gt.</p> 
+    <h1>Nav Tag</h1>   
+        <p>Defines a set of navigation links; &ltnav&gtcontent&lt/nav&gt</p> 
+    <h1>Li Tag</h1>    
+        <p>Defines a set of navigation links,is used in ordered lists, unordered lists and in menu lists.
+            &ltli&gtcontent&lt/li&gt.</p>
 
 </body>
 </html>
